# polytraderabe

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  vercel.json
.claude/skills/: architect.md  backlog-update.md  backtesting.md  day-trader.md  local-testing.md  market-scanner.md  performance-report.md  polymarket-api.md  pre-commit-verify.md  pre-deploy-check.md  signal-monitor.md  supabase-queries.md  trader-backend.md  trader-data.md  trader-deployment.md  trader-frontend.md  trading-engine.md  weather-signals.md  write-backend-tests.md  write-frontend-tests.md
.github/workflows/: ci.yml
api/: main.py
apps/web/: package.json  pnpm-lock.yaml  tsconfig.json
docs/backlog/: BACKLOG.md
services/api/: main.py  pyproject.toml  requirements.txt
services/api/src/: main.py
services/api/src/api/: health.py  markets.py  portfolio.py  signals.py  strategies.py  weather_actuals_api.py  weather_api.py  weather_cron.py  webhooks.py
services/api/src/data/market/: clob.py  discovery.py  gamma.py
services/api/src/data/weather/: open_meteo.py  probability.py
services/api/src/db/: client.py
services/api/src/models/: market.py  signal.py  strategy.py  trade.py
services/api/src/trading/execution/: engine.py  paper.py
services/api/src/trading/risk/: limits.py  manager.py
services/api/src/trading/strategies/: base.py  registry.py  weather_bayesian.py  weather_momentum.py  weather_temp.py
services/api/tests/: test_discovery.py  test_orderbook.py  test_weather_actuals.py  test_weather_bayesian.py  test_weather_momentum.py
supabase/.temp/: pooler-url
(+60 files in other folders)
