[project]
name = "polytrader-api"
version = "0.1.0"
description = "Polymarket weather trading API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "mangum>=0.19.0",
    "supabase>=2.10.0",
    "httpx>=0.28.0",
    "py-clob-client>=0.34.0",
    "pydantic>=2.10.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
